[tool.poetry]
name = " k-defense-ai-assistant"
version = "0.1.0"
description = "RAG-based AI Chatbot for ROK Air Force IT Specialist Applicants"
authors = ["https://github.com/hani0303"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.x"
langchain = "^0.3.13"
langchain-openai = "^0.2.14"
langchain-teddynote = "^0.3.40"
streamlit = "^1.41.1"
jupyter = "^1.1.1"
notebook = "^7.3.2"
langgraph = "^0.2.60"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.13"
faiss-cpu = "^1.9.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
